2007-07-02  Xan Lopez <xan.lopez@nokia.com>

	[1.0.10-2 release]

	* NEWS:
	* debian/changelog: Updating.

2007-07-02  Johan Bilien  <johan.bilien@nokia.com>

	* src/Makefile.am: fixed installation of the header files

2007-06-29  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[1.0.10-1 release]

	* NEWS:
	* configure.ac:
	* debian/changelog: Updating.

2007-06-27  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* configure.ac: Removing some remaining of --enable-xan.

2007-06-26  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-date-editor.c: (hildon_date_editor_keypress):
	* src/hildon-time-editor.c: (hildon_time_editor_entry_keypress):

	Move all focus crazyness to the rc files. This depends on gtk+2.0 >=
	2.10.12-osso6 because the move-focus signal needs to be available in
	GtkWidget.

2007-06-25  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/Makefile.am:
	* examples/hildon-hvolumebar-insensitive-map-example.c: Adding an example
	that makes a HildonVolumebar insensitive before mapping it. Seems to work
	fine. Prolly NB#61128 is fixed now.

2007-06-19  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-volumebar.c:
	* src/hildon-volumebar.h: Adding the
	hildon_volumebar_set_range_insensitive_message and
	hildon_volumebar_set_range_insensitive_messagef functions to set
	insensitive message on the slider of the volumebar. Fixes NB#61129.

	* examples/Makefile.am:
	* examples/hildon-hvolumebar-insensitive-example.c: Adding an example to
	test the new insensitive messsage functionality on HildonVolumebar.

2007-06-14  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-private.c (hildon_private_composite_focus): make the focus handler
	work again.

2007-06-13  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-bread-crumb-trail.c (hildon_bread_crumb_trail_clear): workaround
	http://bugzilla.gnome.org/show_bug.cgi?id=56070 hiding and showing the back
	button on after clearing the trail.
